# webscraping-gupy

./: .gitignore  README.md  crud.py  databasegupy.db  db.py  main.py  model.py  pyproject.toml  scraping.py
