[tool.poetry]
name = "web-scraping-gupy"
version = "0.1.0"
description = ""
authors = ["noel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.40"
pydantic = "^2.11.3"
polars = "^1.27.1"
pandas = "^2.2.3"
bs4 = "^0.0.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
